trying to stop zoom on iOS

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  touch-action: manipulation;
 }
 
 .game-container { 
